--- a/css/styles.css
+++ b/css/styles.css
@@ -215,13 +215,15 @@ header {
     width: 90%;
 }
 
-/* Projetos Grid */
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30%, 3fr));
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
     gap: 2%;
     padding: 0;
     padding-top: 5vh;
+    padding-bottom: 5vh;
+    min-height: max-content;
 }
 
 .card {
